--- a/main.html
+++ b/main.html
@@ -4,6 +4,8 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
+	<img src = "https://storage.googleapis.com/acciojob-open-file-collections/welcome.png">
+</img>
 </head>
 
 <body>
