--- a/main.html
+++ b/main.html
@@ -4,8 +4,7 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
-	<img src = "https://storage.googleapis.com/acciojob-open-file-collections/welcome.png">
-</img>
+	<h1>Welcone to Accio Jobs!</h1>
 </head>
 
 <body>
